NTI-5944 - fix overlap

--- a/src/main/resources/scss/debris/profile/components/_avatar-grid.scss
+++ b/src/main/resources/scss/debris/profile/components/_avatar-grid.scss
@@ -128,6 +128,8 @@
 				color: $primary-grey;
 				line-height: 1.3;
 				padding: 0.5rem 0;
+				margin-right: 2.5rem;
+				overflow: hidden;
 
 				.location {
 					display: block;
